# Spam-Detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  spam_classifier_model.pkl  spam_detection.ipynb  tfidf_vectorizer.pkl
notebooks/: spam_detection.ipynb
