[project]
name = "spam-detection"
version = "1.0.0"
description = "SMS spam classifier using TF-IDF and Multinomial Naive Bayes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Abhinaba Sarkar" },
]

dependencies = [
    "streamlit>=1.30,<2",
    "scikit-learn>=1.3,<2",
    "nltk>=3.8,<4",
    "joblib>=1.3,<2",
]

[project.optional-dependencies]
notebook = [
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "matplotlib>=3.7,<4",
    "seaborn>=0.13,<1",
    "jupyter>=1.0",
]
